Slight refactoring to better organise CSS files, make tests easier to read and write.

--- a/angular.json
+++ b/angular.json
@@ -27,8 +27,8 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.scss",
-              "src/fonts.scss",
+              "src/css/styles.scss",
+              "src/css/fonts.scss",
               "node_modules/reset-css/reset.css"
             ],
             "scripts": [],
