--- a/package.json
+++ b/package.json
@@ -35,11 +35,11 @@
     "angular-cli-ghpages": "~0.5.3",
     "codelyzer": "~4.5.0",
     "jasmine-core": "~2.99.1",
-    "jasmine-spec-reporter": "~4.2.1",
     "karma": "~4.0.0",
     "karma-firefox-launcher": "~1.1.0",
     "karma-jasmine": "~1.1.2",
     "karma-junit-reporter": "~1.2.0",
+    "karma-mocha-reporter": "^2.2.5",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
     "typescript": "~3.2.2"
