--- a/angular.json
+++ b/angular.json
@@ -29,7 +29,8 @@
             "styles": [
               "src/css/styles.scss",
               "src/css/fonts.scss",
-              "node_modules/reset-css/reset.css"
+              "node_modules/reset-css/reset.css",
+              "node_modules/@fortawesome/fontawesome-free/css/all.min.css"
             ],
             "scripts": [],
             "es5BrowserSupport": true
@@ -88,7 +89,8 @@
             "styles": [
               "src/css/styles.scss",
               "src/css/fonts.scss",
-              "node_modules/reset-css/reset.css"
+              "node_modules/reset-css/reset.css",
+              "node_modules/@fortawesome/fontawesome-free/css/all.min.css"
             ],
             "scripts": [],
             "assets": [
