--- a/angular.json
+++ b/angular.json
@@ -27,10 +27,10 @@
               "src/assets"
             ],
             "styles": [
-              "src/css/styles.scss",
-              "src/css/fonts.scss",
               "node_modules/reset-css/reset.css",
-              "node_modules/@fortawesome/fontawesome-free/css/all.min.css"
+              "node_modules/@fortawesome/fontawesome-free/css/all.min.css",
+              "src/css/fonts.scss",
+              "src/css/styles.scss"
             ],
             "scripts": [],
             "es5BrowserSupport": true
@@ -87,10 +87,10 @@
             "tsConfig": "src/tsconfig.spec.json",
             "karmaConfig": "src/karma.conf.js",
             "styles": [
-              "src/css/styles.scss",
-              "src/css/fonts.scss",
               "node_modules/reset-css/reset.css",
-              "node_modules/@fortawesome/fontawesome-free/css/all.min.css"
+              "node_modules/@fortawesome/fontawesome-free/css/all.min.css",
+              "src/css/fonts.scss",
+              "src/css/styles.scss"
             ],
             "scripts": [],
             "assets": [
