Added a slide in animation to the text on the home screen. Changed the GitHub link in the nav bar to point at the specific PaulShields.dev repo. Added some text resizes so the home screen works on slightly smaller windows.

--- a/angular.json
+++ b/angular.json
@@ -30,6 +30,7 @@
               "node_modules/reset-css/reset.css",
               "node_modules/@fortawesome/fontawesome-free/css/all.min.css",
               "src/css/fonts.scss",
+              "src/css/animations.scss",
               "src/css/styles.scss"
             ],
             "scripts": [],
@@ -90,6 +91,7 @@
               "node_modules/reset-css/reset.css",
               "node_modules/@fortawesome/fontawesome-free/css/all.min.css",
               "src/css/fonts.scss",
+              "src/css/animations.scss",
               "src/css/styles.scss"
             ],
             "scripts": [],
