Forcing the CI to use Angular CLI v7.3.8.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,7 +6,7 @@ jobs:
 
     steps:
       - checkout
-      - run: sudo npm install -g @angular/cli
+      - run: sudo npm install -g @angular/cli@7.3.8
 
       - restore_cache:
           keys:
