--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,7 +6,9 @@ jobs:
 
     steps:
       - checkout
-      - run: sudo npm install -g @angular/cli
+      - run: |
+          export NG_CLI_ANALYTICS=false
+          sudo npm install -g @angular/cli
 
       - restore_cache:
           keys:
