--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,9 +6,7 @@ jobs:
 
     steps:
       - checkout
-      - run: |
-          export NG_CLI_ANALYTICS=false
-          sudo npm install -g @angular/cli
+      - run: sudo NG_CLI_ANALYTICS=false npm install -g @angular/cli
 
       - restore_cache:
           keys:
