--- a/package.json
+++ b/package.json
@@ -10,40 +10,39 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~8.1.0",
-    "@angular/common": "~8.1.0",
-    "@angular/compiler": "~8.1.0",
-    "@angular/core": "~8.1.0",
-    "@angular/forms": "~8.1.0",
-    "@angular/platform-browser": "~8.1.0",
-    "@angular/platform-browser-dynamic": "~8.1.0",
-    "@angular/router": "~8.1.0",
-    "core-js": "~2.5.4",
+    "@angular/animations": "~8.2.14",
+    "@angular/common": "~8.2.14",
+    "@angular/compiler": "~8.2.14",
+    "@angular/core": "~8.2.14",
+    "@angular/forms": "~8.2.14",
+    "@angular/platform-browser": "~8.2.14",
+    "@angular/platform-browser-dynamic": "~8.2.14",
+    "@angular/router": "~8.2.14",
     "ngx-tweet": "~2.0.3",
-    "reset-css": "~4.0.1",
-    "rxjs": "~6.5.2",
-    "tslib": "~1.9.0",
+    "reset-css": "~5.0.1",
+    "rxjs": "~6.5.3",
+    "tslib": "~1.10.0",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.801.0",
-    "@angular/cli": "~8.1.0",
-    "@angular/compiler-cli": "~8.1.0",
-    "@angular/language-service": "~8.1.0",
-    "@fortawesome/fontawesome-free": "~5.8.2",
+    "@angular-devkit/build-angular": "~0.803.20",
+    "@angular/cli": "~8.3.20",
+    "@angular/compiler-cli": "~8.2.14",
+    "@angular/language-service": "~8.2.14",
+    "@fortawesome/fontawesome-free": "~5.11.2",
     "@types/jasmine": "~2.8.8",
-    "@types/jasminewd2": "~2.0.3",
+    "@types/jasminewd2": "~2.0.8",
     "@types/node": "~8.9.4",
-    "angular-cli-ghpages": "~0.5.3",
-    "codelyzer": "^5.0.1",
-    "jasmine-core": "~2.99.1",
-    "karma": "~4.0.0",
-    "karma-firefox-launcher": "~1.1.0",
-    "karma-jasmine": "~1.1.2",
-    "karma-junit-reporter": "~1.2.0",
+    "angular-cli-ghpages": "~0.6.0",
+    "codelyzer": "~5.2.0",
+    "jasmine-core": "~3.5.0",
+    "karma": "~4.4.0",
+    "karma-firefox-launcher": "~1.2.0",
+    "karma-jasmine": "~2.0.1",
+    "karma-junit-reporter": "~2.0.1",
     "karma-mocha-reporter": "~2.2.5",
-    "ts-node": "~7.0.0",
-    "tslint": "~5.11.0",
-    "typescript": "~3.4.5"
+    "ts-node": "~8.5.4",
+    "tslint": "~5.20.1",
+    "typescript": "~3.4.0"
   }
 }
