--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "~8.2.14",
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
+    "angular-particle": "~1.0.4",
     "ngx-tweet": "~2.0.3",
     "reset-css": "~5.0.1",
     "rxjs": "~6.5.3",
